assessment-cc-devops-kubernetes-sr-01/k8/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: production
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      #      targetPort: 80
